--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Genoa (Italy) -- History'
 - !lcc 'DG'
+- GITenberg
 title: Histoire de la République de Gênes
 url: http://www.gutenberg.org/ebooks/18669
